force-app/main/default/objects/Rpl_Student_Registration__c/Rpl_Student_Registration__c.object-meta.xml
<CustomObject>
    <label>Student Registrations</label>
    <nameField>
        <label>Student Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>