force-app/main/default/objects/Rpl_Student_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Student_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>