force-app/main/default/objects/Rpl_Student_Registration__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>MTech/MSC/MCA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
                <isActive>false</isActive>
                <label>MCA</label>
            </value>
            <value>
                <fullName>MSC</fullName>
                <isActive>false</isActive>
                <label>MSC</label>
            </value>
            <value>
                <fullName>Master of Business Administration in Finance</fullName>
                <isActive>false</isActive>
                <label>Master of Business Administration in Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>