force-app/main/default/objects/Rpl_Student_Registration__c/fields/IsTenUpload__c.field-meta.xml
<CustomField>
    <fullName>IsTenUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTenUpload</label>
    <type>Checkbox</type>
</CustomField>