force-app/main/default/objects/Rpl_Student_Registration__c/fields/isUnderStatus__c.field-meta.xml
<CustomField>
    <fullName>isUnderStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnderStatus</label>
    <type>Checkbox</type>
</CustomField>