force-app/main/default/objects/Rpl_Student_Registration__c/fields/Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Name__c</fullName>
    <label>Mother Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>