force-app/main/default/objects/Rpl_Student_Registration__c/fields/PG_Overall_Percentage1__c.field-meta.xml
<CustomField>
    <fullName>PG_Overall_Percentage1__c</fullName>
    <formula>IF(
    OR(TEXT(Course_Name__c) == &apos;MBA&apos;, TEXT(Course_Name__c) ==  &apos;MTech/MSC/MCA&apos;),
    (
        (
            Rpl_PG1_Sem_CGPA__c + Rpl_PG2_Sem_CGPA__c + Rpl_PG3_Sem_CGPA__c + Rpl_PG4_Sem_CGPA__c            
        ) / 4
    ) / 10, 

   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PG Overall Percentage1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>