force-app/main/default/objects/Rpl_Student_Registration__c/fields/Reva_Placement__c.field-meta.xml
<CustomField>
    <fullName>Reva_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Placement</label>
    <referenceTo>Rpl_Reva_Placement__c</referenceTo>
    <relationshipName>Student_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>