force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_10th_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_10th_Board_Name__c</fullName>
    <label>10th Board Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>