force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_10th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_10th_Percentage__c</fullName>
    <label>10th Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>