force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_12th_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_12th_Board_Name__c</fullName>
    <label>12th Board Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>