force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_12th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_12th_Percentage__c</fullName>
    <label>12th Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>