force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Acitve_Semester__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Acitve_Semester__c</fullName>
    <formula>Contact__r.Active_Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acitve Semester</label>
    <type>Text</type>
</CustomField>