force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Active_Semester__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Active_Semester__c</fullName>
    <formula>VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1))</formula>
    <label>Active Semester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>