force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Branch__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Branch__c</fullName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>