force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Branch_Name__c</fullName>
    <formula>Contact__r.Primary_Academic_Program__r.Program_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>