force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Cleared_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Cleared_Backlogs__c</fullName>
    <label>Cleared Backlogs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>