force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Companies_Got_Placed_In__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Companies_Got_Placed_In__c</fullName>
    <label>Companies Got Placed In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>