force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Contact_No__c</fullName>
    <label>Contact No.</label>
    <type>Phone</type>
</CustomField>