force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Count_of_non_appeared_drives__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Count_of_non_appeared_drives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Of Non Appeared Drives</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>