force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Current_Address__c</fullName>
    <formula>Contact__r.MailingStreet &amp; &quot; &quot; &amp; Contact__r.MailingCity &amp; &quot; &quot; &amp;  Contact__r.MailingState &amp; &quot; &quot; &amp; Contact__r.MailingCountry &amp; &quot; &quot; &amp; Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Address</label>
    <type>Text</type>
</CustomField>