force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Current_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Current_Date_Time__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date Time</label>
    <type>DateTime</type>
</CustomField>