force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>