force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Diploma_Number__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Diploma_Number__c</fullName>
    <label>Diploma Percentage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>