force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Diploma_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Diploma_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diploma Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>