force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Diploma_University__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Diploma_University__c</fullName>
    <label>Diploma University</label>
    <length>100</length>
    <type>Text</type>
</CustomField>