force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_DiplomaName__c.field-meta.xml
<CustomField>
    <fullName>Rpl_DiplomaName__c</fullName>
    <label>Diploma College Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>