force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Education_Gap__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Education_Gap__c</fullName>
    <label>Education Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>