force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Father_Name__c</fullName>
    <formula>Contact__r.Father_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Father Name</label>
    <type>Text</type>
</CustomField>