force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Full_Name__c</fullName>
    <label>Full Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>