force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Interested_in_placement__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Interested_in_placement__c</fullName>
    <label>Interested In Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>