force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_Pre_Or_Final_Year__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Pre_Or_Final_Year__c</fullName>
    <formula>Contact__r.Rpl_Is_Pre_Or_Final_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pre Or Final Year</label>
    <type>Checkbox</type>
</CustomField>