force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_Record_Shared__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Record_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Shared</label>
    <type>Checkbox</type>
</CustomField>