force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_Student_Details_Verified__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Student_Details_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Student Details Verified</label>
    <type>Checkbox</type>
</CustomField>