force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_UG_Aggregate_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_UG_Aggregate_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UG Aggregate Rejected</label>
    <type>Checkbox</type>
</CustomField>