force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_UG_Aggregate_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_UG_Aggregate_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UG Aggregate Uploaded</label>
    <type>Checkbox</type>
</CustomField>