force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Is_Under_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Under_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the record is in approval process then it will be checked</description>
    <label>Is Under Approval Process</label>
    <type>Checkbox</type>
</CustomField>