force-app/main/default/objects/Rpl_Student_Registration__c/fields/RPL_IsGraduationComplete__c.field-meta.xml
<CustomField>
    <fullName>RPL_IsGraduationComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPL_IsGraduationComplete</label>
    <type>Checkbox</type>
</CustomField>