force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_IsOtpVerified__c.field-meta.xml
<CustomField>
    <fullName>Rpl_IsOtpVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOTPVerified</label>
    <type>Checkbox</type>
</CustomField>