force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_IsResumeUpload__c.field-meta.xml
<CustomField>
    <fullName>Rpl_IsResumeUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResumeUpload</label>
    <type>Checkbox</type>
</CustomField>