force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_isStudentDetailsComplete__c.field-meta.xml
<CustomField>
    <fullName>Rpl_isStudentDetailsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rpl_isStudentDetailsComplete</label>
    <type>Checkbox</type>
</CustomField>