force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_isTwelveUpload__c.field-meta.xml
<CustomField>
    <fullName>Rpl_isTwelveUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rpl_isTwelveUpload</label>
    <type>Checkbox</type>
</CustomField>