force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>