force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Maximum_Offered_Salary__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Maximum_Offered_Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Offered Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>