force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>