force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Mother_Name__c</fullName>
    <formula>Contact__r.Mother_Name1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mother Name</label>
    <type>Text</type>
</CustomField>