force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_No_Of_PG_Marksheet_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Rpl_No_Of_PG_Marksheet_Uploaded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of PG Marksheet Uploaded</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>