force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_No_of_Years__c.field-meta.xml
<CustomField>
    <fullName>Rpl_No_of_Years__c</fullName>
    <formula>Contact__r.Primary_Academic_Program__r.No_of_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>