force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Number_Of_Failed_Drives__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Number_Of_Failed_Drives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Failed Drives</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>