force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Offer_Count__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Offer_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To save the Number of Offer  for particular student</description>
    <label>Offer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>