force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Pan_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Pan_Card_No__c</fullName>
    <label>Pan Card No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>