force-app/main/default/objects/Rpl_Student_Registration__c/fields/RPL_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>RPL_Permanent_Address__c</fullName>
    <formula>Contact__r.OtherStreet &amp; &quot; &quot; &amp; Contact__r.OtherCity &amp; &quot; &quot; &amp; Contact__r.OtherState &amp; &quot; &quot; &amp; Contact__r.OtherCountry &amp; &quot; &quot; &amp; Contact__r.OtherPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permanent Address</label>
    <type>Text</type>
</CustomField>