force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Personal_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Personal_Mail_ID__c</fullName>
    <label>Personal Mail - ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>