force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_PG1_Sem_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG1_Sem_CGPA__c</fullName>
    <label>PG1 Sem CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>